# claans_api

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  configuration.yaml  diesel.toml  spec.yaml
.github/workflows/: ci-development.yml  ci.yml
.sqlx/: query-07c2453661c309a9032ad45e8a2908ac442a99ee7e2ab7efe81cc014d3fb066e.json  query-1b8e298298b3ece04419524c284c3a69fc91e482a71862fdd6a1e9ac43e6b928.json  query-2f3ac24a1f0ab80571c69dfc30a1614881804ac9ca4df8999675334f71edfef3.json  query-374d660220a4fa5997a32940563745c984b33c891d611b6cae6676179f151c05.json  query-9463c21959cdd0da62136f895129639de3f024fc10205619f4311576907707c7.json  query-a5254d705725781ac123bcf00de8120988bf54b509ec07aefc884e0a3b0e00ea.json  query-a7b6ae883facb27068b7b40c1c4ea1d00c0913c75062074d5c534489bf95c94b.json  query-f153b4b9b889c8ead877ef9d4bcee6374878dcefd8c8ded710e957ed836b933a.json
api/: Cargo.toml
api/src/handlers/: claans.rs
application/: Cargo.toml
application/src/: lib.rs
application/src/claans/: create.rs  delete.rs  read.rs  update.rs
configuration/: base.yaml  production.yaml
domain/: Cargo.toml
domain/src/: models.rs
domain/src/models/: claans.rs  dice.rs  records.rs  seasons.rs  tasks.rs  tasktype.rs  users.rs
infrastructure/: Cargo.toml
infrastructure/migrations/2024-08-25-172038_create_type_dice/: up.sql
infrastructure/migrations/2024-08-25-172750_create_table_claans/: up.sql
infrastructure/migrations/2024-08-25-200918_create_table_tasks/: up.sql
infrastructure/src/: schema.rs
migrations/: 20240928155323_create_subscription_table.sql  20240928155323_create_users_table.down.sql  20240928155323_create_users_table.sql  20241005220827_add_status_to_users.down.sql  20241005220827_add_status_to_users.up.sql  20241005221402_make_status_not_null_in_users.down.sql  20241005221402_make_status_not_null_in_users.up.sql  20241005232525_create_user_tokens_table.down.sql  20241005232525_create_user_tokens_table.up.sql
migrations/2024-08-24-173601_create_type_claan/: down.sql  up.sql
migrations/2024-08-25-172038_create_type_dice/: down.sql
migrations/2024-08-25-192834_create_table_users/: up.sql
migrations/2024-08-25-201550_create_table_seasons/: down.sql  up.sql
scripts/: init_db.sh
shared/: Cargo.toml
shared/src/: response_models.rs
src/: configuration.rs  crud.rs  database.rs  email_client.rs  lib.rs  main.rs  models.rs  startup.rs
src/bak/: claan.rs
src/crud/claans/: create.rs  delete.rs  read.rs  update.rs
src/crud/users/: create.rs
src/database/: schema.rs
src/database/migrations/2024-08-24-173601_create_type_tasktype/: down.sql  up.sql
src/database/migrations/2024-08-25-172750_create_table_claans/: down.sql
src/database/migrations/2024-08-25-192834_create_table_users/: up.sql
src/database/migrations/2024-08-25-214756_create_table_records/: up.sql
src/domain/: mod.rs  new_user.rs  subscriber_email.rs  subscriber_name.rs  user_email.rs  user_name.rs
src/handlers/: claans.rs
src/models/: claans.rs  dice.rs  records.rs  response_models.rs  seasons.rs  tasks.rs  tasktype.rs  users.rs
src/routes/: email.rs  mod.rs  register_confirm.rs  subscriptions.rs  users.rs  users_confirm.rs
tests/: health_check.rs
tests/api/: email.rs  email_client.rs  health_check.rs  helpers.rs  main.rs  subscriptions.rs  user_email.rs  users.rs  users_confirm.rs
