[package]
name = "claans-api"
version = "0.1.0"
edition = "2021"
authors = ["Jake Ratcliffe <jaker1342@gmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "claans-api"

[dependencies]
actix-web = "4.9.0"
config = "0.14.0"
reqwest = "0.12.7"
serde = { version = "1.0.210", features = ["derive"] }
sqlx = { version = "0.8.2", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
