[package]
name = "claans_api"
version = "0.1.0"
edition = "2021"
authors = ["Jake Ratcliffe <jaker1342@gmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "claans_api"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.89"
chrono = "0.4.38"
config = "0.14.0"
rand = { version = "0.8.5", features = ["std_rng"] }
secrecy = { version = "0.10.2", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde-aux = "4.5.0"
sqlx = { version = "0.8.2", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.13"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.10.0", features = ["v4"] }
validator = "0.18.1"

[dependencies.reqwest]
version = "0.12.7"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
claims = "0.7.1"
fake = "2.10.0"
linkify = "0.10.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde_json = "1.0.128"
wiremock = "0.6.2"

[profile.release]
strip = "symbols"
