[package]
name = "application"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
shared = { path = "../shared" }

rocket = { version = "0.5.1", features = ["json"] }
serde_json = { version = "1.0.128" }
diesel = { version = "2.2.3", features = ["postgres", "chrono"] }
